--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <h4 id="footer_title">Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
