--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </p>
         </div>
     </main>
-    <div class="benefits">
+    <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="icon of lead generation" />
@@ -70,7 +70,7 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
-    </div>
+    </section>
     <footer class="footer">
         <h4 id="footer_title">Made with ❤️️ by Horiseon</h4>
         <p>
