--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" alt="man on laptop displaying graphs titled Reputation" class="online-reputation-management">
+        <div alt="man on laptop displaying graphs titled Reputation" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" id="image_height" />
             <h2 id="three_services" >Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" alt="a collection of graphic icons spread on table" class="social-media-marketing">
+        <div alt="a collection of graphic icons spread on table" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" id="image_height" />
             <h2 id="three_services" >Social Media Marketing</h2>
             <p>
