three classees removed contained in section element as no longer relevant due to CSS consolidation

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
         </div>
     </main>
     <section class="benefits">
-        <div class="benefit-lead">
+        <div>
             <h3 id="png" >Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="icon of lead generation" id="image" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div>
             <h3 id="png" >Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="icon of brand awareness" id="image" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div>
             <h3 id="png" >Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="icon of cost management" id="image" />
             <p>
