--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
     </main>
     <section class="benefits">
         <div>
-            <h3 id="png" >Lead Generation</h3>
+            <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="icon of lead generation" id="image" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div>
-            <h3 id="png" >Brand Awareness</h3>
+            <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="icon of brand awareness" id="image" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div>
-            <h3 id="png" >Cost Management</h3>
+            <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="icon of cost management" id="image" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
