--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     </header>
     <figure class="hero"></figure>
     <main class="content">
-        <div class="services">
+        <div>
             <img src="./assets/images/search-engine-optimization.jpg" alt="picture of desk supplies showing outline of SEO elements" class="float-left" id="image_height" />
             <h2 id="three_services" >Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div alt="man on laptop displaying graphs titled Reputation" class="services">
+        <div alt="man on laptop displaying graphs titled Reputation">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" id="image_height" />
             <h2 id="three_services" >Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div alt="a collection of graphic icons spread on table" class="services">
+        <div alt="a collection of graphic icons spread on table">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" id="image_height" />
             <h2 id="three_services" >Social Media Marketing</h2>
             <p>
