id footer_size omitted as redundant

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </section>
     <footer class="footer">
-        <h4 id="footer_title">Made with ❤️️ by Horiseon</h4>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2024 Horiseon Social Solution Services, Inc.
         </p>
